--- a/main.tex
+++ b/main.tex
@@ -26,8 +26,10 @@
 \usepackage{tcolorbox}
 \usepackage{tikz}
 
-\usetikzlibrary{arrows.meta,
+\usetikzlibrary{arrows,
+                arrows.meta,
                 decorations,
+                decorations.markings,
                 decorations.pathreplacing,
                 decorations.text}
 
