--- a/alpaka.tex
+++ b/alpaka.tex
@@ -457,7 +457,7 @@ $\vec{y}$ durch. Die im Folgenden erläuterten Konzepte wurden stark durch die i
 CUDA und OpenCL vorhandenen Abstraktionen beeinflusst
 \cite[vgl.][17]{worpitz2015}.
 
-\subsubsection{Threads}
+\subsubsection{Grid und Threads}
 
 Alpaka"=\textit{Threads} sind einer der Grundbausteine des Abstraktionskonzepts.
 Ein idealer datenparalleler Algorithmus lässt sich theoretisch optimal durch
@@ -465,13 +465,18 @@ einen \textit{Thread} pro Datenelement parallelisieren. Der Begriff
 \glqq Thread\grqq\ ist in diesem Zusammenhang nicht mit einem Thread des
 Betriebssystems oder einem CUDA"=Thread zu verwechseln -- er repräsentiert
 lediglich eine Befehlssequenz, die den gewünschten Algorithmus auf ein einzelnes
-Datenelement anwendet \cite[vgl.][17]{worpitz2015}. Die Menge aller
-\textit{Threads} bildet ein $n$"=dimensionales Gitter (engl. \textit{Grid}).
+Datenelement anwendet \cite[vgl.][17]{worpitz2015}. Konzeptionell entspricht
+ein \textit{Thread} also einem \textit{work"=item} aus SYCL und OpenCL. Die
+Menge aller \textit{Threads} bildet ein $n$"=dimensionales Gitter
+(engl. \textit{Grid}). Dieses ist damit mit der aus SYCL und OpenCL bekannten
+\textit{NDRange} vergleichbar.
+
 Da manche Algorithmen die Kommunikation zwischen \textit{Threads} erfordern,
 verfügen diese außerdem über entsprechende Mittel zur Synchronisation. Die
 genannte Befehlssequenz pro Element ist der \textit{Kernel}. Die
 Abbildung~\ref{alpaka:konzepte:abstraktion:threads:gridthreadhw} zeigt eine
-theoretische Hardware, die dieses Konzept ideal abbildet.
+theoretische Hardware, auf die das \textit{Thread}"=\textit{Grid}"=Konzept ideal
+anwendbar wäre.
 
 \begin{figure}
     \centering
@@ -480,14 +485,14 @@ theoretische Hardware, die dieses Konzept ideal abbildet.
         \node [align = center] (hwtext) at (9.0834, 6.75) {\textbf{Theoretische Hardware}};
 
         \draw [rounded corners, fill = HKS41!70] (0.0, 0.0) rectangle (3.5, 5.5);
-        \draw [rounded corners, fill = HKS07!70] (0.25, 0.25) rectangle (3.25, 2.5);
+        \draw [rounded corners, fill = HKS07!70] (0.24, 0.24) rectangle (3.26, 2.5);
 
-        \node [align=center] (gridtext) at (1.75, 5) {\Large\color{white}\textbf{Grid}};
-        \node [align=center] (threadtext) at (1.75, 2) {\Large\color{white}\textbf{Thread}};
+        \node [align = center] (gridtext) at (1.75, 5) {\Large\color{white}\textbf{Grid}};
+        \node [align = center] (threadtext) at (1.75, 2) {\Large\color{white}\textbf{Thread}};
 
         \draw [line width = 0.75mm] (4, -0.75) -- (4, 6.25);
 
-        \path [fill = HKS41!70] (4.75, 6) -- (12.4167, 6) -- (13.4167, 5)
+        \path [draw, fill = HKS41!70] (4.75, 6) -- (12.4167, 6) -- (13.4167, 5)
                                 -- (13.4167, -0.5) -- (5.75, -0.5)
                                 -- (4.75, 0.5) -- (4.75, 6);
 
@@ -498,93 +503,93 @@ theoretische Hardware, die dieses Konzept ideal abbildet.
               \end{enumerate}};
         \node [align = center] (proctext) at (9.0834, 5) {\Large\color{white}\textbf{Prozessor}};
 
-        \path [fill = HKS07!70] (7.3334, 4.5) -- (8.3334, 4.5) -- (8.4334, 4.4)
+        \path [draw, fill = HKS07!70] (7.3334, 4.5) -- (8.3334, 4.5) -- (8.4334, 4.4)
                                 -- (8.4334, 3.9) -- (7.4334, 3.9) -- (7.3334, 4)
                                 -- (7.3334, 4.5);
         \node [align = center] (coretext0) at (7.8834, 4.2) {\color{white}Kern};
-        \path [fill = HKS07!70] (8.5334, 4.5) -- (9.5334, 4.5) -- (9.6334, 4.4)
+        \path [draw, fill = HKS07!70] (8.5334, 4.5) -- (9.5334, 4.5) -- (9.6334, 4.4)
                                 -- (9.6334, 3.9) -- (8.6334, 3.9) -- (8.5334, 4)
                                 -- (8.5334, 4.5);
         \node [align = center] (coretext1) at (9.0834, 4.2) {\color{white}Kern};
-        \path [fill = HKS07!70] (9.7334, 4.5) -- (10.7334, 4.5) -- (10.8334, 4.4)
+        \path [draw, fill = HKS07!70] (9.7334, 4.5) -- (10.7334, 4.5) -- (10.8334, 4.4)
                                 -- (10.8334, 3.9) -- (9.8334, 3.9) -- (9.7334, 4)
                                 -- (9.7334, 4.5);
         \node [align = center] (coretext2) at (10.2834, 4.2) {\color{white}Kern};
-        \path [fill = HKS07!70] (10.9334, 4.2) -- (11.9334, 4.2) -- (12.0334, 4.1)
+        \path [draw, fill = HKS07!70] (10.9334, 4.2) -- (11.9334, 4.2) -- (12.0334, 4.1)
                                 -- (12.0334, 3.6) -- (11.0334, 3.6) -- (10.9334, 3.7)
                                 -- (10.9334, 4.2);
         \node [align = center] (coretext3) at (11.4834, 3.9) {\color{white}Kern};
 
-        \path [fill = HKS07!70] (11.4834, 3.5) -- (12.4834, 3.5) -- (12.5834, 3.4)
+        \path [draw, fill = HKS07!70] (11.4834, 3.5) -- (12.4834, 3.5) -- (12.5834, 3.4)
                                 -- (12.5834, 2.9) -- (11.5834, 2.9) -- (11.4834, 3.0)
                                 -- (11.4834, 3.5);
         \node [align = center] (coretext4) at (12.0334, 3.2) {\color{white}Kern};
 
-        \path [fill = HKS07!70] (12.0334, 2.8) -- (13.0334, 2.8) -- (13.0434, 2.79)
+        \path [draw, fill = HKS07!70] (12.0334, 2.8) -- (13.0334, 2.8) -- (13.0434, 2.79)
                                 -- (13.0434, 2.69) -- (12.0434, 2.69)
                                 -- (12.0334, 2.7) -- (12.0334, 2.8);
-        \path [fill = HKS07!70] (12.0334, 2.6017) -- (13.0334, 2.6017) -- (13.0434, 2.5917)
+        \path [draw, fill = HKS07!70] (12.0334, 2.6017) -- (13.0334, 2.6017) -- (13.0434, 2.5917)
                                 -- (13.0434, 2.4917) -- (12.0434, 2.4917)
                                 -- (12.0334, 2.5017) -- (12.0334, 2.6017);
-        \path [fill = HKS07!70] (12.0334, 2.4034) -- (13.0334, 2.4034) -- (13.0434, 2.3934)
+        \path [draw, fill = HKS07!70] (12.0334, 2.4034) -- (13.0334, 2.4034) -- (13.0434, 2.3934)
                                 -- (13.0434, 2.2934) -- (12.0434, 2.2934)
                                 -- (12.0334, 2.3034) -- (12.0334, 2.4034);
-        \path [fill = HKS07!70] (12.0334, 2.2051) -- (13.0334, 2.2051) -- (13.0434, 2.1951)
+        \path [draw, fill = HKS07!70] (12.0334, 2.2051) -- (13.0334, 2.2051) -- (13.0434, 2.1951)
                                 -- (13.0434, 2.0951) -- (12.0434, 2.0951)
                                 -- (12.0334, 2.1051) -- (12.0334, 2.2051);
-        \path [fill = HKS07!70] (12.0334, 2.0068) -- (13.0334, 2.0068) -- (13.0434, 1.9968)
+        \path [draw, fill = HKS07!70] (12.0334, 2.0068) -- (13.0334, 2.0068) -- (13.0434, 1.9968)
                                 -- (13.0434, 1.8968) -- (12.0434, 1.8968)
                                 -- (12.0334, 1.9068) -- (12.0334, 2.0068);
-        \path [fill = HKS07!70] (12.0334, 1.8058) -- (13.0334, 1.8058) -- (13.0434, 1.7958)
+        \path [draw, fill = HKS07!70] (12.0334, 1.8058) -- (13.0334, 1.8058) -- (13.0434, 1.7958)
                                 -- (13.0434, 1.6958) -- (12.0434, 1.6958)
                                 -- (12.0334, 1.7058) -- (12.0334, 1.8058);
-        \path [fill = HKS07!70] (12.0334, 1.61) -- (13.0334, 1.61) -- (13.0434, 1.6)
+        \path [draw, fill = HKS07!70] (12.0334, 1.61) -- (13.0334, 1.61) -- (13.0434, 1.6)
                                 -- (13.0434, 1.5) -- (12.0434, 1.5)
                                 -- (12.0334, 1.51) -- (12.0334, 1.61);
 
 
-        \path [fill = HKS07!70] (11.4834, 1.4) -- (12.4834, 1.4) -- (12.5834, 1.3)
+        \path [draw, fill = HKS07!70] (11.4834, 1.4) -- (12.4834, 1.4) -- (12.5834, 1.3)
                                 -- (12.5834, 0.8) -- (11.5834, 0.8) -- (11.4834, 0.9)
                                 -- (11.4834, 1.4);
         \node [align = center] (coretext5) at (12.0334, 1.1) {\color{white}Kern};
-        \path [fill = HKS07!70] (10.9334, 0.7) -- (11.9334, 0.7) -- (12.0334, 0.6)
+        \path [draw, fill = HKS07!70] (10.9334, 0.7) -- (11.9334, 0.7) -- (12.0334, 0.6)
                                 -- (12.0334, 0.1) -- (11.0334, 0.1) -- (10.9334, 0.2)
                                 -- (10.9334, 0.7);
         \node [align = center] (coretext6) at (11.4834, 0.4) {\color{white}Kern};
 
-        \path [fill = HKS07!70] (9.7334, 0.4) -- (10.7334, 0.4) -- (10.8334, 0.3)
+        \path [draw, fill = HKS07!70] (9.7334, 0.4) -- (10.7334, 0.4) -- (10.8334, 0.3)
                                 -- (10.8334, -0.2) -- (9.8334, -0.2) -- (9.7334, -0.1)
                                 -- (9.7334, 0.4);
         \node [align = center] (coretext7) at (10.2834, 0.1) {\color{white}Kern};
-        \path [fill = HKS07!70] (8.5334, 0.4) -- (9.5334, 0.4) -- (9.6334, 0.3)
+        \path [draw, fill = HKS07!70] (8.5334, 0.4) -- (9.5334, 0.4) -- (9.6334, 0.3)
                                 -- (9.6334, -0.2) -- (8.6334, -0.2) -- (8.5334, -0.1)
                                 -- (8.5334, 0.4);
         \node [align = center] (coretext8) at (9.0834, 0.1) {\color{white}Kern};
-        \path [fill = HKS07!70] (7.3334, 0.4) -- (8.3334, 0.4) -- (8.4334, 0.3)
+        \path [draw, fill = HKS07!70] (7.3334, 0.4) -- (8.3334, 0.4) -- (8.4334, 0.3)
                                 -- (8.4334, -0.2) -- (7.4334, -0.2) -- (7.3334, -0.1)
                                 -- (7.3334, 0.4);
         \node [align = center] (coretext9) at (7.8834, 0.1) {\color{white}Kern};
-        \path [fill = HKS07!70] (6.1334, 0.7) -- (7.1334, 0.7) -- (7.2334, 0.6)
+        \path [draw, fill = HKS07!70] (6.1334, 0.7) -- (7.1334, 0.7) -- (7.2334, 0.6)
                                 -- (7.2334, 0.1) -- (6.2334, 0.1) -- (6.1334, 0.2)
                                 -- (6.1334, 0.7);
         \node [align = center] (coretext10) at (6.6834, 0.4) {\color{white}Kern};
-        \path [fill = HKS07!70] (5.5334, 1.4) -- (6.5334, 1.4) -- (6.6334, 1.3)
+        \path [draw, fill = HKS07!70] (5.5334, 1.4) -- (6.5334, 1.4) -- (6.6334, 1.3)
                                 -- (6.6334, 0.8) -- (5.6334, 0.8) -- (5.5334, 0.9)
                                 -- (5.5334, 1.4);
         \node [align = center] (coretext11) at (6.0834, 1.1) {\color{white}Kern};
-        \path [fill = HKS07!70] (5.3334, 2.1) -- (6.3334, 2.1) -- (6.4334, 2.0)
+        \path [draw, fill = HKS07!70] (5.3334, 2.1) -- (6.3334, 2.1) -- (6.4334, 2.0)
                                 -- (6.4334, 1.5) -- (5.4334, 1.5) -- (5.3334, 1.6)
                                 -- (5.3334, 2.1);
         \node [align = center] (coretext12) at (5.8834, 1.8) {\color{white}Kern};
-        \path [fill = HKS07!70] (5.3334, 2.8) -- (6.3334, 2.8) -- (6.4334, 2.7)
+        \path [draw, fill = HKS07!70] (5.3334, 2.8) -- (6.3334, 2.8) -- (6.4334, 2.7)
                                 -- (6.4334, 2.2) -- (5.4334, 2.2) -- (5.3334, 2.3)
                                 -- (5.3334, 2.8);
         \node [align = center] (coretext13) at (5.8834, 2.5) {\color{white}Kern};
-        \path [fill = HKS07!70] (5.5834, 3.5) -- (6.5834, 3.5) -- (6.6834, 3.4)
+        \path [draw, fill = HKS07!70] (5.5834, 3.5) -- (6.5834, 3.5) -- (6.6834, 3.4)
                                 -- (6.6834, 2.9) -- (5.6834, 2.9) -- (5.5834, 3.0)
                                 -- (5.5834, 3.5);
         \node [align = center] (coretext14) at (6.1334, 3.2) {\color{white}Kern};
-        \path [fill = HKS07!70] (6.1334, 4.2) -- (7.1334, 4.2) -- (7.2334, 4.1)
+        \path [draw, fill = HKS07!70] (6.1334, 4.2) -- (7.1334, 4.2) -- (7.2334, 4.1)
                                 -- (7.2334, 3.6) -- (6.2334, 3.6) -- (6.1334, 3.7)
                                 -- (6.1334, 4.2);
         \node [align = center] (coretext15) at (6.6834, 3.9) {\color{white}Kern};
@@ -595,6 +600,353 @@ theoretische Hardware, die dieses Konzept ideal abbildet.
              Abstraktionsschema ideal ausführen könnte.
              \cite[nach][18]{worpitz2015}}
     \label{alpaka:konzepte:abstraktion:threads:gridthreadhw}
+\end{figure}
+
+\subsubsection{Blocks}
+
+Eine wie in Abbildung~\ref{alpaka:konzepte:abstraktion:threads:gridthreadhw}
+dargestellte Hardware mit tausenden untereinander verbundenen Kernen kommt
+in der Realität selten vor. Es ist daher sinnvoll, eine Einschränkung der
+Kommunikations"= und Synchronisationsfähigkeiten der \textit{Threads} auf ein
+von handelsüblicher Hardware beherrschbares Niveau vorzunehmen.
+
+Zu diesem Zweck verwendet Alpaka eine weitere Ebene innerhalb der
+Abstraktionshierarchie, die \textit{Blocks}. Diese sind zwischen der
+\textit{Thread}"= und \textit{Grid}"=Ebene angesiedelt, wobei ein \textit{Block}
+eine Teilmenge der \textit{Threads} vereinigt. Das \textit{Grid} wird dabei
+gleichmäßig auf die \textit{Blocks} aufgeteilt, sodass alle \textit{Block}
+gleich groß sind. Konzeptionell entspricht ein \textit{Block} damit einer
+SYCL"=\textit{work"=group}. Die schnelle Kommunikation und Synchronisation der
+\textit{Threads} sind ausschließlich über einen \textit{block}"=internen kleinen
+gemeinsamen Speicher (\textit{shared memory}) möglich, jedoch nicht mehr über
+das gesamte \textit{Grid}. Eine für dieses Abstraktionsschema ideale
+theoretische Hardware ist in
+Abbildung~\ref{alpaka:konzepte:abstraktion:blocks:gridblockhw} dargestellt.
+Diese erlaubt die \textit{block}"=interne Kommunikation, muss jedoch keine
+Fähigkeiten für die Kommunikation bzw. Synchronisation zwischen \textit{Blocks}
+besitzen.
+
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \node [align = center] (abstrtext) at (1.75, 6.75) {\textbf{Abstraktion}};
+        \node [align = center] (hwtext) at (9.0834, 6.75) {\textbf{Theoretische Hardware}};
+
+        \draw [rounded corners, fill = HKS41!70] (0.0, 0.0) rectangle (3.5, 5.5);
+        \draw [rounded corners, fill = HKS57!70] (0.08, 0.08) rectangle (3.42, 4.5);
+        \draw [rounded corners, fill = HKS07!70] (0.24, 0.24) rectangle (3.26, 2.5);
+
+        \node [align = center] (gridtext) at (1.75, 5) {\Large\color{white}\textbf{Grid}};
+        \node [align = center] (blocktext) at (1.75, 4) {\Large\color{white}\textbf{Block}};
+        \node [align = center] (threadtext) at (1.75, 2) {\Large\color{white}\textbf{Thread}};
+
+        \draw [line width = 0.75mm] (4, -0.75) -- (4, 6.25);
+
+        \path [draw, fill = HKS41!70] (4.75, 6) -- (12.4167, 6) -- (13.4167, 5)
+                                -- (13.4167, -0.5) -- (5.75, -0.5)
+                                -- (4.75, 0.5) -- (4.75, 6);
+
+        \node [align = center] (proctext) at (9.0834, 5) {\Large\color{white}\textbf{Prozessor}};
+        \node [align = center] (desctext) at (9.5834, -0.25) {\small\color{white}1"=zu"=1"=Abbildung von \textit{Threads} auf Kerne};
+
+        % obere Reihe
+        \path [draw, fill = HKS57!70] (5.45, 2.35) -- (5.2, 2.6) -- (5.2, 4.6)
+                                -- (7.95, 4.6) -- (8.2, 4.35)
+                                -- (8.2, 2.35) -- (5.45, 2.35);
+        \path [draw, fill = HKS07!70] (5.55, 2.45) -- (5.45, 2.55) -- (5.45, 3.05)
+                                -- (6.45, 3.05) -- (6.55, 2.95) -- (6.55, 2.45)
+                                -- (5.55, 2.45);
+        \path [draw, fill = HKS07!70] (5.55, 3.9) -- (5.45, 4.0) -- (5.45, 4.5)
+                                -- (6.45, 4.5) -- (6.55, 4.4) -- (6.55, 3.9)
+                                -- (5.55, 3.9);
+        \path [draw, fill = HKS07!70] (6.95, 3.9) -- (6.85, 4.0) -- (6.85, 4.5)
+                                -- (7.85, 4.5) -- (7.95, 4.4) -- (7.95, 3.9)
+                                -- (6.95, 3.9);
+        \path [draw, fill = HKS07!70] (6.95, 2.45) -- (6.85, 2.55) -- (6.85, 3.05)
+                                -- (7.85, 3.05) -- (7.95, 2.95) -- (7.95, 2.45)
+                                -- (6.95, 2.45);
+        \node [align = center] (coretext0) at (6, 2.75) {\color{white}Kern};
+        \node [align = center] (coretext1) at (6, 4.2) {\color{white}Kern};
+        \node [align = center] (coretext2) at (7.4, 4.2) {\color{white}Kern};
+        \node [align = center] (coretext3) at (7.4, 2.75) {\color{white}Kern};
+        \path [draw, fill = HKS07!100] (5.55, 3.25) -- (5.45, 3.35) -- (5.45, 3.7)
+                                -- (7.85, 3.7) -- (7.95, 3.6) -- (7.95, 3.25)
+                                -- (5.55, 3.25);
+        \node [align = center] (sharedtext0) at (6.7, 3.475) {\footnotesize\color{white}geteilter Speicher};
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (6, 2.95) -- (6, 3.35);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (6, 4.0) -- (6, 3.6);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.4, 2.95) -- (7.4, 3.35);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.4, 4.0) -- (7.4, 3.6);
+
+        \path [draw, fill = HKS57!70] (8.55, 2.35) -- (8.3, 2.6) -- (8.3, 4.6)
+                                -- (11.05, 4.6) -- (11.3, 4.35)
+                                -- (11.3, 2.35) -- (8.55, 2.35);
+        \path [draw, fill = HKS07!70] (8.65, 2.45) -- (8.55, 2.55) -- (8.55, 3.05)
+                                -- (9.55, 3.05) -- (9.65, 2.95) -- (9.65, 2.45)
+                                -- (8.65, 2.45);
+        \path [draw, fill = HKS07!70] (8.65, 3.9) -- (8.55, 4.0) -- (8.55, 4.5)
+                                -- (9.55, 4.5) -- (9.65, 4.4) -- (9.65, 3.9)
+                                -- (8.65, 3.9);
+        \path [draw, fill = HKS07!70] (10.05, 3.9) -- (9.95, 4.0) -- (9.95, 4.5)
+                                -- (10.95, 4.5) -- (11.05, 4.4) -- (11.05, 3.9)
+                                -- (10.05, 3.9);
+        \path [draw, fill = HKS07!70] (10.05, 2.45) -- (9.95, 2.55) -- (9.95, 3.05)
+                                -- (10.95, 3.05) -- (11.05, 2.95) -- (11.05, 2.45)
+                                -- (10.05, 2.45);
+        \node [align = center] (coretext4) at (9.1, 2.75) {\color{white}Kern};
+        \node [align = center] (coretext5) at (9.1, 4.2) {\color{white}Kern};
+        \node [align = center] (coretext6) at (10.5, 4.2) {\color{white}Kern};
+        \node [align = center] (coretext7) at (10.5, 2.75) {\color{white}Kern};
+        \path [draw, fill = HKS07!100] (8.65, 3.25) -- (8.55, 3.35) -- (8.55, 3.7)
+                                -- (10.95, 3.7) -- (11.05, 3.6) -- (11.05, 3.25)
+                                -- (8.65, 3.25);
+        \node [align = center] (sharedtext1) at (9.8, 3.475) {\footnotesize\color{white}geteilter Speicher};
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (9.1, 2.95) -- (9.1, 3.35);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (9.1, 4.0) -- (9.1, 3.6);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (10.5, 2.95) -- (10.5, 3.35);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (10.5, 4.0) -- (10.5, 3.6);
+
+        \path [draw, fill = HKS57!70] (11.4, 4.6) -- (11.6, 4.6) -- (11.7, 4.5)
+                                -- (11.7, 2.35) -- (11.5, 2.35) -- (11.4, 2.45)
+                                -- (11.4, 4.6);
+        \path [draw, fill = HKS57!70] (11.8, 4.6) -- (12, 4.6) -- (12.1, 4.5)
+                                -- (12.1, 2.35) -- (11.9, 2.35) -- (11.8, 2.45)
+                                -- (11.8, 4.6);
+        \path [draw, fill = HKS57!70] (12.2, 4.6) -- (12.4, 4.6) -- (12.5, 4.5)
+                                -- (12.5, 2.35) -- (12.3, 2.35) -- (12.2, 2.45)
+                                -- (12.2, 4.6);
+        \path [draw, fill = HKS57!70] (12.6, 4.6) -- (12.8, 4.6) -- (12.9, 4.5)
+                                -- (12.9, 2.35) -- (12.7, 2.35) -- (12.6, 2.45)
+                                -- (12.6, 4.6);
+        % untere Reihe
+        \path [draw, fill = HKS57!70] (5.45, 0) -- (5.2, 0.25) -- (5.2, 2.25)
+                                -- (7.95, 2.25) -- (8.2, 2)
+                                -- (8.2, 0) -- (5.45, 0);
+        \path [draw, fill = HKS07!70] (5.55, 0.1) -- (5.45, 0.2) -- (5.45, 0.7)
+                                -- (6.45, 0.7) -- (6.55, 0.6) -- (6.55, 0.1)
+                                -- (5.55, 0.1);
+        \path [draw, fill = HKS07!70] (5.55, 1.55) -- (5.45, 1.65) -- (5.45, 2.15)
+                                -- (6.45, 2.15) -- (6.55, 2.05) -- (6.55, 1.55)
+                                -- (5.55, 1.55);
+        \path [draw, fill = HKS07!70] (6.95, 1.55) -- (6.85, 1.65) -- (6.85, 2.15)
+                                -- (7.85, 2.15) -- (7.95, 2.05) -- (7.95, 1.55)
+                                -- (6.95, 1.55);
+        \path [draw, fill = HKS07!70] (6.95, 0.1) -- (6.85, 0.2) -- (6.85, 0.7)
+                                -- (7.85, 0.7) -- (7.95, 0.6) -- (7.95, 0.1)
+                                -- (6.95, 0.1);
+        \node [align = center] (coretext8) at (6, 0.4) {\color{white}Kern};
+        \node [align = center] (coretext9) at (6, 1.85) {\color{white}Kern};
+        \node [align = center] (coretext10) at (7.4, 1.85) {\color{white}Kern};
+        \node [align = center] (coretext11) at (7.4, 0.4) {\color{white}Kern};
+        \path [draw, fill = HKS07!100] (5.55, 0.9) -- (5.45, 1.0) -- (5.45, 1.35)
+                                -- (7.85, 1.35) -- (7.95, 1.25) -- (7.95, 0.9)
+                                -- (5.55, 0.9);
+        \node [align = center] (sharedtext2) at (6.7, 1.125) {\footnotesize\color{white}geteilter Speicher};
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (6, 0.6) -- (6, 1.0);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (6, 1.65) -- (6, 1.25);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.4, 0.6) -- (7.4, 1.0);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.4, 1.65) -- (7.4, 1.25);
+
+        \path [draw, fill = HKS57!70] (8.55, 0) -- (8.3, 0.25) -- (8.3, 2.25)
+                                -- (11.05, 2.25) -- (11.3, 2)
+                                -- (11.3, 0) -- (8.55, 0);
+        \path [draw, fill = HKS07!70] (8.65, 0.1) -- (8.55, 0.2) -- (8.55, 0.7)
+                                -- (9.55, 0.7) -- (9.65, 0.6) -- (9.65, 0.1)
+                                -- (8.65, 0.1);
+        \path [draw, fill = HKS07!70] (8.65, 1.55) -- (8.55, 1.65) -- (8.55, 2.15)
+                                -- (9.55, 2.15) -- (9.65, 2.05) -- (9.65, 1.55)
+                                -- (8.65, 1.55);
+        \path [draw, fill = HKS07!70] (10.05, 1.55) -- (9.95, 1.65) -- (9.95, 2.15)
+                                -- (10.95, 2.15) -- (11.05, 2.05) -- (11.05, 1.55)
+                                -- (10.05, 1.55);
+        \path [draw, fill = HKS07!70] (10.05, 0.1) -- (9.95, 0.2) -- (9.95, 0.7)
+                                -- (10.95, 0.7) -- (11.05, 0.6) -- (11.05, 0.1)
+                                -- (10.05, 0.1);
+        \node [align = center] (coretext12) at (9.1, 0.4) {\color{white}Kern};
+        \node [align = center] (coretext13) at (9.1, 1.85) {\color{white}Kern};
+        \node [align = center] (coretext14) at (10.5, 1.85) {\color{white}Kern};
+        \node [align = center] (coretext15) at (10.5, 0.4) {\color{white}Kern};
+        \path [draw, fill = HKS07!100] (8.65, 0.9) -- (8.55, 1.0) -- (8.55, 1.35)
+                                -- (10.95, 1.35) -- (11.05, 1.25) -- (11.05, 0.9)
+                                -- (8.65, 0.9);
+        \node [align = center] (sharedtext3) at (9.8, 1.125) {\footnotesize\color{white}geteilter Speicher};
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (9.1, 0.6) -- (9.1, 1.0);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (9.1, 1.65) -- (9.1, 1.25);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (10.5, 0.6) -- (10.5, 1.0);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (10.5, 1.65) -- (10.5, 1.25);
+
+        \path [draw, fill = HKS57!70] (11.4, 2.25) -- (11.6, 2.25) -- (11.7, 2.15)
+                                -- (11.7, 0) -- (11.5, 0) -- (11.4, 0.1)
+                                -- (11.4, 2.25);
+        \path [draw, fill = HKS57!70] (11.8, 2.25) -- (12, 2.25) -- (12.1, 2.15)
+                                -- (12.1, 0) -- (11.9, 0) -- (11.8, 0.1)
+                                -- (11.8, 2.25);
+        \path [draw, fill = HKS57!70] (12.2, 2.25) -- (12.4, 2.25) -- (12.5, 2.15)
+                                -- (12.5, 0) -- (12.3, 0) -- (12.2, 0.1)
+                                -- (12.2, 2.25);
+        \path [draw, fill = HKS57!70] (12.6, 2.25) -- (12.8, 2.25) -- (12.9, 2.15)
+                                -- (12.9, 0) -- (12.7, 0) -- (12.6, 0.1)
+                                -- (12.6, 2.25);
+
+    \end{tikzpicture}
+    \caption{Links: Abstraktionshierarchie mit einem \textit{Grid}, das aus
+             zu \textit{Blocks} gruppierten \textit{Threads} besteht.
+             Rechts: Ein theoretischer Prozessor, der eine 1"=zu"=1"=Abbildung
+             von \textit{Threads} auf Kerne sowie schnelle Synchronisation und
+             Kommunikation innerhalb der \textit{Blocks} ermöglicht.
+             \cite[nach][19]{worpitz2015}}
+    \label{alpaka:konzepte:abstraktion:blocks:gridblockhw}
+\end{figure}
+
+\subsubsection{Warps}
+
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \node [align = center] (abstrtext) at (1.75, 6.75) {\textbf{Abstraktion}};
+        \node [align = center] (hwtext) at (9.0834, 6.75) {\textbf{Theoretische Hardware}};
+
+        \draw [rounded corners, fill = HKS41!70] (0.0, 0.0) rectangle (3.5, 5.5);
+        \draw [rounded corners, fill = HKS57!70] (0.08, 0.08) rectangle (3.42, 4.5);
+        \draw [rounded corners, fill = HKS33!70] (0.16, 0.16) rectangle (3.34, 3.5);
+        \draw [rounded corners, fill = HKS07!70] (0.24, 0.24) rectangle (3.26, 2.5);
+
+        \node [align = center] (gridtext) at (1.75, 5) {\Large\color{white}\textbf{Grid}};
+        \node [align = center] (blocktext) at (1.75, 4) {\Large\color{white}\textbf{Block}};
+        \node [align = center] (warptext) at (1.75, 3) {\Large\color{white}\textbf{Warp}};
+        \node [align = center] (threadtext) at (1.75, 2) {\Large\color{white}\textbf{Thread}};
+
+        \draw [line width = 0.75mm] (4, -0.75) -- (4, 6.25);
+
+        \path [draw, fill = HKS41!70] (4.75, 6) -- (12.4167, 6) -- (13.4167, 5)
+                                      -- (13.4167, -0.5) -- (5.75, -0.5)
+                                      -- (4.75, 0.5) -- (4.75, 6);
+
+        \node [align = center] (proctext) at (9.0834, 5) {\Large\color{white}\textbf{Prozessor}};
+
+        % obere Reihe
+        \path [draw, fill = HKS57!70] (5.45, 2.35) -- (5.2, 2.6) -- (5.2, 4.6)
+                                      -- (8.75, 4.6) -- (9, 4.35)
+                                      -- (9, 2.35) -- (5.45, 2.35);
+        \path [draw, fill = HKS07!100] (5.55, 2.45) -- (5.45, 2.55)
+                                       -- (5.45, 2.9) -- (8.65, 2.9)
+                                       -- (8.75, 2.8) -- (8.75, 2.45)
+                                       -- (5.55, 2.45);
+        \node [align = center] (sharedtext0) at (7.1, 2.675) {\small\color{white}geteilter Speicher};
+        \path [draw, fill = HKS07!70] (7.15, 3.9) -- (7.05, 4.0) -- (7.05, 4.5)
+                                -- (8.05, 4.5) -- (8.15, 4.4) -- (8.15, 3.9)
+                                -- (7.15, 3.9);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.6, 4.05) -- (7.6, 2.75);
+        \path [draw, fill = HKS07!70] (7.35, 3.9) -- (7.25, 4.0) -- (7.25, 4.5)
+                                -- (8.25, 4.5) -- (8.35, 4.4) -- (8.35, 3.9)
+                                -- (7.35, 3.9);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (7.8, 4.05) -- (7.8, 2.75);
+        \path [draw, fill = HKS07!70] (7.55, 3.9) -- (7.45, 4.0) -- (7.45, 4.5)
+                                -- (8.45, 4.5) -- (8.55, 4.4) -- (8.55, 3.9)
+                                -- (7.55, 3.9);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (8.0, 4.05) -- (8.0, 2.75);
+        \path [draw, fill = HKS07!70] (7.75, 3.9) -- (7.65, 4.0) -- (7.65, 4.5)
+                                -- (8.65, 4.5) -- (8.75, 4.4) -- (8.75, 3.9)
+                                -- (7.75, 3.9);
+        \draw [{Latex[scale=0.5]}-{Latex[scale = 0.5]}, very thick] (8.2, 4.05) -- (8.2, 2.75);
+        \node [align = center] (coretext0) at (8.2, 4.2) {\color{white}Kern};
+        \path [draw, fill = HKS33!70] (5.55, 4.0) -- (5.45, 4.1) -- (5.45, 4.5)
+                                      -- (6.7, 4.5) -- (6.8, 4.4)
+                                      -- (6.8, 4.0) -- (5.55, 4.0);
+        \path [draw, fill = HKS33!70] (5.55, 3.8) -- (5.45, 3.9) -- (5.45, 4.3)
+                                      -- (6.7, 4.3) -- (6.8, 4.2)
+                                      -- (6.8, 3.8) -- (5.55, 3.8);
+        \path [draw, fill = HKS33!70] (5.55, 3.6) -- (5.45, 3.7) -- (5.45, 4.1)
+                                      -- (6.7, 4.1) -- (6.8, 4.0)
+                                      -- (6.8, 3.6) -- (5.55, 3.6);
+        \path [draw, fill = HKS33!70] (5.55, 3.4) -- (5.45, 3.5) -- (5.45, 3.9)
+                                      -- (6.7, 3.9) -- (6.8, 3.8)
+                                      -- (6.8, 3.4) -- (5.55, 3.4);
+        \path [draw, fill = HKS33!70] (5.55, 3.2) -- (5.45, 3.3) -- (5.45, 3.7)
+                                      -- (6.7, 3.7) -- (6.8, 3.6)
+                                      -- (6.8, 3.2) -- (5.55, 3.2);
+        \path [draw, fill = HKS33!70] (5.55, 3.0) -- (5.45, 3.1) -- (5.45, 3.5)
+                                      -- (6.7, 3.5) -- (6.8, 3.4)
+                                      -- (6.8, 3.0) -- (5.55, 3.0);
+        \node [align = center] (warptext0) at (6.125, 3.25) {\small\color{white}Warp};
+
+        \path [draw, fill = HKS57!70] (9.4, 2.35) -- (9.15, 2.6) -- (9.15, 4.6)
+                                      -- (12.7167, 4.6) -- (12.9667, 4.35)
+                                      -- (12.9667, 2.35) -- (9.4, 2.35);
+        \path [draw, fill = HKS07!100] (9.5, 2.45) -- (9.4, 2.55)
+                                       -- (9.4, 2.9) -- (12.6, 2.9)
+                                       -- (12.7, 2.8) -- (12.7, 2.45)
+                                       -- (9.5, 2.45);
+        \node [align = center] (sharedtext1) at (11.05, 2.675) {\small\color{white}geteilter Speicher};
+
+        % untere Reihe
+        \path [draw, fill = HKS57!70] (5.45, 0) -- (5.2, 0.25) -- (5.2, 2.25)
+                                      -- (8.75, 2.25) -- (9, 2)
+                                      -- (9, 0) -- (5.45, 0);
+        \path [draw, fill = HKS07!100] (5.55, 0.1) -- (5.45, 0.2)
+                                       -- (5.45, 0.55) -- (8.65, 0.55)
+                                       -- (8.75, 0.45) -- (8.75, 0.1)
+                                       -- (5.55, 0.1);
+        \node [align = center] (sharedtext2) at (7.1, 0.325) {\small\color{white}geteilter Speicher};
+
+        \path [draw, fill = HKS57!70] (9.4, 0) -- (9.15, 0.25) -- (9.15, 2.25)
+                                      -- (12.7167, 2.25) -- (12.9667, 2)
+                                      -- (12.9667, 0) -- (9.4, 0);
+        \path [draw, fill = HKS07!100] (9.5, 0.1) -- (9.4, 0.2)
+                                       -- (9.4, 0.55) -- (12.6, 0.55)
+                                       -- (12.7, 0.45) -- (12.7, 0.1)
+                                       -- (9.5, 0.1);
+        \node [align = center] (sharedtext3) at (11.05, 0.325) {\small\color{white}geteilter Speicher};
+
+    \end{tikzpicture}
+    \caption{Links: Abstraktionshierarchie mit einem \textit{Grid}, das aus
+             zu \textit{Blocks} gruppierten \textit{Warps} besteht. Letzere sind
+             wiederum aus mehreren \textit{Threads} zusammengesetzt.
+             Rechts: Ein theoretischer Prozessor, der eine 1"=zu"=1"=Abbildung
+             von \textit{Threads} auf Kerne sowie schnelle Synchronisation und
+             Kommunikation innerhalb der \textit{Blocks} ermöglicht. Durch die
+             taktgenaue gemeinsame Ausführung der \textit{Threads} in Form von
+             \textit{Warps} kann Chipfläche eingespart werden.
+             \cite[nach][20]{worpitz2015}}
+    \label{alpaka:konzepte:abstraktion:warps:warphw}
+\end{figure}
+\subsubsection{Elements}
+
+Mit dem \textit{Element}"=Konzept ermöglicht Alpaka dem Programmierer die
+genauere Anpassung auf die Ziel"=Hardware. Die Idee, jeden \textit{Thread} genau
+ein Datum bearbeiten zu lassen, ist nicht immer der optimale Weg. So kann es
+beispielsweise sinnvoll sein, auf CPU"=Beschleunigern mehrere Daten pro
+\textit{Thread} innerhalb kurzer Schleifen zu verarbeiten. Dadurch können gute
+Compiler selbstständig von Vektorregistern der CPU Gebrauch machen, alternativ
+kann der Programmierer dies auch explizit selbst tun.
+
+Die \textit{Element}"=Ebene ist die unterste Ebene der
+Alpaka"=Abstraktionshierarchie. Dadurch ergibt sich die Gesamthierarchie, wie
+sie in Abbildung~\ref{alpaka:konzepte:abstraktion:elements:vollstaendig}
+dargestellt ist.
+
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \draw [rounded corners, fill = HKS41!70] (0.0, 0.0) rectangle (3.5, 5.5);
+        \draw [rounded corners, fill = HKS57!70] (0.08, 0.08) rectangle (3.42, 4.5);
+        \draw [rounded corners, fill = HKS33!70] (0.16, 0.16) rectangle (3.34, 3.5);
+        \draw [rounded corners, fill = HKS07!70] (0.24, 0.24) rectangle (3.26, 2.5);
+        \draw [rounded corners, fill = HKS36!70] (0.32, 0.32) rectangle (3.18, 1.5);
+
+        \node [align = center] (gridtext) at (1.75, 5) {\Large\color{white}\textbf{Grid}};
+        \node [align = center] (blocktext) at (1.75, 4) {\Large\color{white}\textbf{Block}};
+        \node [align = center] (warptext) at (1.75, 3) {\Large\color{white}\textbf{Warp}};
+        \node [align = center] (threadtext) at (1.75, 2) {\Large\color{white}\textbf{Thread}};
+        \node [align = center] (elemtext) at (1.75, 0.91) {\Large\color{white}\textbf{Element}};
+    \end{tikzpicture}
+    \caption{Vollständiges Alpaka"=Abstraktionskonzept: Mehrere
+             \textit{Elements} werden von einem \textit{Thread} verarbeitet.
+             Mehrere \textit{Threads} werden innerhalb eines \textit{Warps}
+             taktgenau gemeinsam ausgeführt, mehrere \textit{Warps} bilden
+             wiederum einen \textit{Block}. Die Menge aller \textit{Blocks}
+             ergibt das \textit{Grid}. \cite[nach][22]{worpitz2015}}
+    \label{alpaka:konzepte:abstraktion:elements:vollstaendig}
 \end{figure}
 
 \subsection{Abhängigkeiten zwischen Kerneln}
