--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usepackage[ngerman=ngerman-x-latest]{hyphsubst}
 \usepackage{isodate}
 \usepackage[newfloat]{minted}
+\usepackage{multirow}
 \usepackage{nth}
 \usepackage{pdfpages}
 \usepackage{selinput}
@@ -108,7 +109,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \printbibliography[heading=bibintoc]
-\pagenumbering{Roman}
 
 \listoffigures
 \listoftables
